# StackInit

./: .gitignore  README.md  cli.py  pyproject.toml
data/: templates_list.json
parsers/: init_parser.py
stackinit/: cli.py
stackinit/data/: types_list.json
stackinit/executors/: add_exec.py  init_exec.py
stackinit/parsers/: __init__.py  add_parsers.py  init_parser.py
